[package]
name = "billing_notification"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
lambda_runtime = "0.13.0"
aws_lambda_events = "0.15.1"
dotenvy = "0.15.7"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-costexplorer = "1.44.0"

reqwest = {version = "0.12.7", features = ["blocking", "json"]}
chrono = "0.4.38"
rust_decimal = "1.35.0"